--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Jarvis AI",
   "version": "1.0",
-  "description": "Use OpenAI's GPT-4 to generate text, translate languages, and write code on any website.",
+  "description": "Leverage OpenAI's GPT model for text generation, language translation, and coding tasks across various online platforms.",
   "permissions": ["storage"],
   "action": {
     "default_icon": "icon48.png",
